# oop-communication-module

./: .gitignore  CLAUDE.md  DIAGNOSIS.md  FIRMWARE.md  PHASE2_GUIDE.md  README.md  RUNNING.md  SPEC.md  pyproject.toml  requirements.txt
.claude/skills/configure-firmware/: SKILL.md
.claude/skills/debug-bluetooth/: SKILL.md
cam/: platformio.ini
cam/src/: credentials.example.h  main.cpp
computer/: __init__.py  main.py  requirements.txt
computer/communication/: __init__.py  assembler.py  cam_receiver.py  protocol.py  robot_sender.py  transport.py
computer/manual/: __init__.py  keyboard.py  main.py
computer/src/: communication_module.py  image_assembler.py  image_processor.py  main.py  protocol.py  robot_controller.py  transport.py
computer/types/: __init__.py  detections.py  observers.py  signals.py  transport.py
computer/vision/: __init__.py  computer_vision_class.py  detection_utils.py  image_receiver_class.py  image_utils.py  processor.py  strategy.py  test_vision.py
emulator/: README.md  SPEC.md  requirements.txt
emulator/src/: emulator.py  image_generator.py  keyboard_input.py  main.py  protocol.py  robot_emulator.py  serial_link.py  simulated_robot.py  tcp_link.py
esp32/: platformio.ini
esp32/src/: BluetoothComm.cpp  BluetoothComm.h  CameraModule.cpp  CameraModule.h  Protocol.h  RobotComm.cpp  RobotComm.h  WheelController.cpp  WheelController.h  main.cpp
robot/: platformio.ini
robot/src/: credentials.example.h  main.cpp
scripts/: run.sh
skills/: README.md
skills/emulator/: extend_mock.md
skills/protocol/: sync_message_type.md
(+23 files in other folders)
